# libsovtoken

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  CHANGELOG.md  Cargo.toml  MAINTAINERS.md  README.md  \  aws_local_codebuild_libsovtoken.env  gitpod.yml
.devcontainer/: Dockerfile  devcontainer.json
devops/: Makefile  Makefile.android.in  (+3 more)
libsovtoken/: .gitignore  Cargo.toml  android.build.sh  build.rs  docker-compose.yml
libsovtoken/build_scripts/android/: README.md  android_settings.txt  libindy.dependencies.txt
libsovtoken/build_scripts/android/indy/: Dockerfile  build.nondocker.sh  build.sh
libsovtoken/build_scripts/android/libsovtoken/: Dockerfile  build.nondocker.sh  build.sh  libsovtoken.dependencies.txt  pack.sh
libsovtoken/build_scripts/android/libsovtoken/_build/linux-android-ndk-r16b/: CHANGELOG.md
libsovtoken/build_scripts/android/libsovtoken/_build/linux-android-ndk-r16b/shader-tools/linux-x86_64/: glslc  spirv-as  spirv-cfg  spirv-dis  spirv-opt  spirv-val
libsovtoken/build_scripts/ios/mac/: README.md  mac.01.env.setup.sh  mac.01.libindy.setup.sh  mac.02.libindy.env.sh  mac.03.libindy.build.sh  mac.08.libssl.libcrypto.build.sh  mac.09.libzmq.libsodium.build.sh  mac.10.libminiz.libsqlite3.combine.sh  mac.14.libsovtoken.build.sh  shared.functions.sh
libsovtoken/ci/: README.md  run-tests.sh  run.sh  ubuntu.dockerfile
libsovtoken/ci/ubuntu/: Dockerfile  build.sh
libsovtoken/dev/ubuntu/: Dockerfile  README.md  build.sh  build_docker.sh
libsovtoken/src/: lib.rs
libsovtoken/src/api/: mod.rs
libsovtoken/src/libraries/: mod.rs  rust_base58.rs  sodium.rs
libsovtoken/src/logic/: add_request_fees.rs  address.rs  build_payment.rs  did.rs  fees.rs  fees_config.rs  fees_req_config.rs  get_txn_fees.rs  hash.rs  indysdk_api.rs  input.rs  map_async.rs  minting.rs  mod.rs  output.rs  output_mint_config.rs  parse_get_utxo_response.rs  payment_address_config.rs  payments.rs  request.rs  responses.rs  set_fees.rs  type_aliases.rs  types.rs  utxo.rs  verify.rs  xfer_payload.rs
libsovtoken/src/logic/api_internals/: add_request_fees.rs  create_address.rs  mod.rs
libsovtoken/src/logic/config/: fees_req_config.rs  general.rs  get_auth_rule_config.rs  get_fees_config.rs  get_utxo_config.rs  mod.rs  output_mint_config.rs  payment_address_config.rs  payment_config.rs  set_fees_config.rs
libsovtoken/src/logic/indy_sdk_api/: crypto.rs  crypto_api.rs  ledger.rs  logger.rs  mod.rs
libsovtoken/src/logic/parsers/: common.rs  error_code_parser.rs  mod.rs  parse_get_auth_rule.rs  parse_get_txn_fees.rs  parse_get_utxo_response.rs  parse_payment_response.rs  parse_response_with_fees_handler.rs  parse_verify.rs
libsovtoken/src/utils/: base58.rs  callbacks.rs  conversions.rs  default.rs  ffi_support.rs  general.rs  json_conversion.rs  logger.rs  macros.rs  map_async.rs  mod.rs  random.rs  results.rs  sequence.rs  serde-json.rs  txn_author_agreement.rs  types.rs  validation.rs
libsovtoken/src/utils/constants/: general.rs  mod.rs  txn_fields.rs  txn_types.rs
libsovtoken/src/utils/test/: callbacks.rs  default.rs  mod.rs
libsovtoken/tests/: add_fees_for_attrib_test.rs  add_fees_for_cred_def_test.rs  add_fees_for_nym.rs  add_fees_for_revoke_reg_def.rs  add_fees_for_schema_test.rs  add_request_fees_handler_test.rs  api_tests.rs  build_add_fees_txn_handler_test.rs  build_fees_txn_handler_test.rs  build_get_fees_txn_handler_test.rs  build_get_utxo_request_handler_test.rs  build_mint_txn_handler_test.rs  build_payment_req_handler_test.rs  build_verify_req_test.rs  conversion_tests.rs  create_payment_addres_handler_tests.rs  create_payment_tests.rs  json_conversion_test.rs  mod.rs  parse_payment_response_test.rs  payment_chaos_tests.rs  payments_tests.rs  sign_with_address_test.rs
libsovtoken/tests/utils/: anoncreds.rs  callbacks.rs  did.rs  environment.rs  fees.rs  get_utxo.rs  ledger.rs  mint.rs  mod.rs  parse_mint_response.rs  pool.rs  setup.rs  test.rs  wallet.rs
libsovtoken/tests/utils/payment/: address.rs  fees.rs  get_utxo.rs  mod.rs
samples/create_payment_demo/: Cargo.toml  build.rs
samples/create_payment_demo/src/: callbacks.rs  indy.rs  libsovtoken.rs  main.rs
(+95 files in other folders)
