[package]
name = "libsovtoken"
version = "0.8.0"
authors = [
  "Matt Raffel <matt.raffel@evernym.com",
  "Stephen Felt <stephen.felt@evernym.com",
  "Cam Parra <camilo.parra@evernym.com",
  "Darien Hess <darien.hess@evernym.com>",
  "Jerry Senninger <jerry.senninger@evernym.com>"
  ]

description = "Payment handler for Sovrin tokens in libindy"
build="build.rs"

[lib]
name = "sovtoken"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib", "cdylib"]

[dependencies]
base64 = "0.6.0"
env_logger = "0.5.10"
hex = "0.2.0"
lazy_static = "0.2"
libc = "0.2.21"
log = "0.4.1"
openssl = "0.9.24"
rand = "0.4.2"
rust-base58 = { git = "https://github.com/lovesh/rust-base58.git", branch = "b58check" }
rust-indy-sdk = { git = "https://github.com/mikelodder7/rust-indy-sdk.git"}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.6.0"
sha3 = "0.6.0"
sodiumoxide = {version = "0.0.14"}

[features]
default = ["integration"]
integration = []
