[package]
name = "libsovtoken"
version = "0.9.2"
authors = [
  "Matt Raffel <matt.raffel@evernym.com",
  "Stephen Felt <stephen.felt@evernym.com",
  "Cam Parra <camilo.parra@evernym.com",
  "Darien Hess <darien.hess@evernym.com>",
  "Jerry Senninger <jerry.senninger@evernym.com>"
  ]

description = "Payment handler for Sovrin tokens in libindy"
build="build.rs"

[lib]
name = "sovtoken"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib", "cdylib"]

[dependencies]
bs58 = {version="0.2.2", features = ["check"]}
base64 = "0.6.0"
env_logger = "0.5.10"
hex = "0.2.0"
lazy_static = "0.2"
libc = "0.2.21"
log = "0.4.1"
log-panics = "2.0.0"
openssl = "0.9.24"
rand = "0.4.2"
rust-libindy-wrapper = "0.2.13"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.6.0"
sha3 = "0.6.0"
sodiumoxide = {version = "0.0.14"}

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.5"

[features]
default = ["integration"]
integration = []
