[package]
name = "libsovtoken"

version = "1.0.1"

authors = [
  "Matt Raffel <matt.raffel@evernym.com",
  "Stephen Felt <stephen.felt@evernym.com",
  "Cam Parra <camilo.parra@evernym.com",
  "Darien Hess <darien.hess@evernym.com>",
  "Jerry Senninger <jerry.senninger@evernym.com>"
  ]

description = "Payment handler for Sovrin tokens in libindy"
build="build.rs"

[lib]
name = "sovtoken"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib", "cdylib"]

[dependencies]
bs58 = {version="0.2.2", features = ["check"]}
base64 = "0.10.1"
hex = "0.2.0"
lazy_static = "1.3.0"
libc = "0.2.41"
log = "0.4.6"
openssl = "0.10.20"
rand = "0.3"
indy-sys = "=1.11.0-rc-81"
indy = "=1.11.0-rc-81"
serde = "1.0.89"
serde_derive = "1.0.89"
serde_json = "1.0.39"
sha2 = "0.8.0"
sha3 = "0.8.0"
time = "0.1.42"


[dev-dependencies]
dirs = "1.0.4"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false

[features]
default = ["integration"]
integration = []
