[package]
name = "create_payment_demo"
version = "0.1.0"
authors = ["matt raffel <matt.raffel@evernym.com>"]

[dependencies]
indy = {git = "https://github.com/hyperledger/indy-sdk.git" }
libsovtoken = { path = "../../libsovtoken" }
digest = "0.6.2"
env_logger = "0.4.2"
etcommon-rlp = "0.2.3"
generic-array = "0.8.3"
hex = "0.2.0"
libc = "0.2.21"
log = "0.3.7"
openssl = { version = "=0.9.24", optional = true }
rand = "0.3"
rusqlcipher = { version = "0.14.6", features=["bundled"] }
rust-base58 = {version = "0.0.4", optional = true}
base64 = "0.6.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
sha2 = "0.6.0"
sha3 = "0.6.0"
rmp-serde = "0.13.6"
sodiumoxide = {version = "0.0.14", optional = true}
time = "0.1.36"
zmq = "0.8.2"
lazy_static = "1.0"
byteorder = "1.0.0"